--- a/style.css
+++ b/style.css
@@ -1,13 +1,23 @@
+h1 {
+  font-weight: 500;
+  line-height: 1.1;
+  position: relative;
+  top: 3px;
+  color: white;	
+}
+
 body {
   background-color: #fff;
 }
 
-.logo{
-    width : 550px;
-    height : 50px;
-    margin : 0;
-    padding : 0;
-    left: 25px;
-    top: 5px;
-    position: relative;
+.logo {
+position:fixed;
+right:10px;
+bottom:10px;
+}
+
+.banner{
+position:fixed;
+right:0px;
+left:0px;
 }
